--- a/index.html
+++ b/index.html
@@ -11,23 +11,31 @@
 
 <body>
     <Header><img src="ib_logo.png" alt="IB LOGO" height="60" width="150"></Header>
-
-
     <div class="div">
-
         <h1>I am Bham</h1>
         <h2>Calling all Pioneers, Builders, and The Determined</h2>
         <h3>From steel factories to start-ups, this city of artisans has relied on the strength and the <br>
             skill of its people. Innovate Birmingham will propel the next generation of pioneers on <br>
             the frontier of the tech company.
         </h3>
-        <button>Learn More</button>
+        <button class="button1">LEARN MORE</button>
         <img src="mac.png" height="400" class="mac">
-
     </div>
-
-<hr>
-
+    <div class="red">
+        <img src="html.png" alt="HTML" class="html">
+        <img src="css.png" alt="CSS" class="css">
+        <img src="js.png" alt="JS" class="js">
+    </div>
+    <div class="blue">
+        <p>Learn HTML. Markup for your webpage!</p>
+        <p>Style your HTML with CSS!</p>
+        <p>Want anything to do anything. Then you need JS!</p>
+    </div>
+    <div class="yellow">
+        <button>LEARN MORE</button>
+        <button>LEARN MORE</button>
+        <button>LEARN MORE</button>
+    </div>
 </body>
 
 </html>
